# jeremydaysite

./: .gitignore  .gitmodules  DEV.md  Pipfile  README.md  REQUIREMENTS  UPDATE-2025.md  context_processors.py  fabfile.py  livejournal.py  manage.py  pyproject.toml  requirements.txt  settings.py  settings.py.in  twslib.py  urls.py
1999/: aliases.html  art.htm  byme.html  home.htm  index.html  journal.htm  manifesto.htm  milktrik.html  myself.htm  ofme.html  photos.htm  written.htm
1999/ballardia/: ballard.htm  calypso.htm  gallamer.htm  gallbest.htm  gallcrash.htm  gallcrys.htm  galldrht.htm  galldrown.htm  gallery.htm  gallforever.htm  gallfour.htm  galllow.htm  gallover.htm  gallstorm.htm  gallverm.htm  gallwind.htm  jgb.htm
1999/barbie/: barbiecam.htm  barbiemovie.htm  barbiemovies.htm
1999/bible/: 1-12-97.htm  10-1-99.htm  10-10-00.htm  10-3-00.htm  10-3-98.htm  11-5-97.htm  11-5-98.htm  11-7-98.htm  12-3-99.htm  12-7-99.htm  12-8-98.htm  12-8-99.htm  13-6-99.htm  14-1-00.htm  14-5-98.htm  14-6-97.htm  14-6-98.htm  15-5-98.htm  15-6-99.htm  15-8-00.htm  16-8-99.htm  17-3-00.htm  17-5-97.htm  17-5-98.htm  17-7-99.htm  (+64 more)
content/: introduction.md  other-sites.data  other-sites.yaml  setup.md  tws.data
frontpage/: tests.py  views.py
jeremyday/: UPDATE-2025.md  context_processors.py  livejournal.py  other_sites.py  settings.py  settings.py.in  settings_production.py  twslib.py  urls.py  wsgi.py
jeremydaysite/: asgi.py  settings.py  urls.py  wsgi.py
noughties/: index.html  jrd1.css
theweeklystrip/: rdf_views.py  urls.py  views.py
tpl/: base.html
(+177 files in other folders)
