[project]
name = "jeremydaysite"
version = "0.1.0"
description = "Jeremy Day site"
authors = [
    {name = "Damian Cugley",email = "pdc@alleged.org.uk"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "httplib2 (>=0.22.0,<0.23.0)",
    "spreadlinks (>=0.4.1,<0.5.0)",
    "html5lib (>=1.1,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
